# kids-reading-tracker

./: .gitignore  README.md  nx.json  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/admin/: .env.example  package-lock.json  package.json
apps/admin/src/: App.test.tsx
apps/api/: .env.example  pyproject.toml  run.py
apps/api/catalog/: admin.py  models.py  openlibrary.py  services.py  tests.py
apps/api/catalog/migrations/: 0001_initial.py
apps/api/config/: settings.py  urls.py
apps/api/core/: admin.py  auth_views.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/api/core/migrations/: 0001_initial.py
apps/mobile/: .env.example  .gitignore  App.tsx  metro.config.js  package.json
apps/mobile/src/api/: auth.ts  client.ts  library.ts
apps/mobile/src/context/: AuthContext.tsx
apps/mobile/src/screens/: AddBookScreen.tsx  BarcodeScannerScreen.tsx  LibraryScreen.tsx  LoginScreen.tsx
apps/web/: package-lock.json  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/api/: auth.ts  library.ts
apps/web/src/components/: NavBar.test.tsx  NavBar.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
apps/web/src/context/: AuthContext.test.tsx  AuthContext.tsx
apps/web/src/pages/: HomePage.test.tsx  HomePage.tsx  LibraryPage.test.tsx  LibraryPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx
