[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.14",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "djangorestframework-simplejwt>=5.4.0",
    "google-auth>=2.38.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]
